-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.3
-
9799d0fd66e2f99cd1d3a2c46d1976b306bfedfc
Running this minimal code
import QtQuick 2.15 import QtQuick.Controls 2.15 Window { id: window width: 200 height: 200 visible: true ScrollBar {} }
results in
Binding on contentItem is not deferred as requested by the DeferredPropertyNames class info because it constitutes a group property.
The error doesn't seem to affect the actual opacity animation though:
import QtQuick 2.15 import QtQuick.Controls 2.15 Window { id: window width: 200 height: 200 visible: true Flickable { anchors.fill: parent focus: true contentWidth: textItem.implicitWidth contentHeight: textItem.implicitHeight Keys.onUpPressed: scrollBar.decrease() Keys.onDownPressed: scrollBar.increase() ScrollBar.vertical: ScrollBar { id: scrollBar } Text { id: textItem text: "ABCDEF\nGHIJK" font.pixelSize: 200 } } }
ScrollIndicator has the same issue.
Likely caused by 9fc480db9a02b0f1084719cc676b976efda18013.
- is required for
-
QTBUG-98718 Make qtdeclarative tests fail on warnings
-
- Open
-
- relates to
-
QTBUG-50992 QQC2: Object destroyed during incubation
-
- Closed
-
-
QTBUG-63036 qmlDeferredExecute() crashes with grouped properties
-
- Closed
-
- resulted in
-
QTBUG-98964 No way to disable "Binding on contentItem is not deferred" warning when code deliberately doesn't care about deferred execution
-
- Closed
-
| For Gerrit Dashboard: QTBUG-98439 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 383853,2 | Suppress warning about deferred group properties if scope is deferred | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |