Suppress warning about deferred group properties if scope is deferred

If a scope is already deferred, any group properties inside that scope
are automatically deferred anyway. There is no point in warning about
them not being deferred individually.

Fixes: QTBUG-98439
Change-Id: I058a4d971087388cd2b6a88a47741c541331b691
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>